generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}
enum RolUsuario {
  ADMIN
  DUENO
  VENDEDOR
}

enum EstadoColeccion {
  ACTIVA
  OCULTA
  ARCHIVADA
}

enum EstadoProducto {
  ACTIVO
  AGOTADO
  ARCHIVADO
}

enum EstadoVariante {
  ACTIVA
  AGOTADA
  ARCHIVADA
}

enum TipoMovimientoInventario {
  ENTRADA
  SALIDA
  AJUSTE
  VENTA
  APARTADO
  DANADO
}

model Usuario {
  id        String   @id @default(cuid())
  nombre    String
  email     String   @unique
  password  String?
  rol       RolUsuario @default(ADMIN)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  tienda    Tienda?  @relation("Propietario")

  // Si es VENDEDOR: la tienda donde trabaja (no es dueño de ella).
  tiendaTrabajoId String?
  tiendaTrabajo   Tienda? @relation("Personal", fields: [tiendaTrabajoId], references: [id])
}

model Tienda {
  id          String   @id @default(cuid())
  nombre      String
  descripcion String?
  logoUrl     String?
  bannerUrl   String?
  colorTema   String?  @default("#ffffff")
  estiloCatalogo String @default("JUVENIL")
  whatsapp    String?
  instagram   String?
  direccion   String?
  slug        String   @unique
  activa      Boolean  @default(true)
  modulos     Json?

  // Caja: fondo de cambio del vendedor y umbral de efectivo "peligroso".
  fondoCaja         Decimal  @default(0) @db.Decimal(10, 2)
  umbralCajaPeligro Decimal? @db.Decimal(10, 2)

  usuarioId   String   @unique
  usuario     Usuario  @relation("Propietario", fields: [usuarioId], references: [id])
  personal    Usuario[] @relation("Personal")

  colecciones Coleccion[]
  productos   Producto[]
  ventas      Venta[]
  usoIA       UsoIA[]
  retiros     RetiroCaja[]
  promociones Promocion[]

  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model Coleccion {
  id          String           @id @default(cuid())
  nombre      String
  descripcion String?
  imagenUrl   String?
  estado      EstadoColeccion @default(ACTIVA)
  orden       Int             @default(0)

  tiendaId    String
  tienda      Tienda          @relation(fields: [tiendaId], references: [id])

  productos   ProductoColeccion[]

  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([tiendaId])
}

model Producto {
  id           String         @id @default(cuid())
  nombre       String
  descripcion  String?
  marca        String?
  codigoBarras String?
  precio       Decimal        @db.Decimal(10, 2)
  estado       EstadoProducto @default(ACTIVO)
  destacado    Boolean        @default(false)
  fechaIngreso DateTime       @default(now())

  tiendaId     String
  tienda       Tienda         @relation(fields: [tiendaId], references: [id])

  imagenes     ProductoImagen[]
  variantes    Variante[]
  colecciones  ProductoColeccion[]

  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  @@index([tiendaId])
  @@index([estado])
  @@index([codigoBarras])
}

model ProductoImagen {
  id         String   @id @default(cuid())
  url        String
  orden      Int      @default(0)

  productoId String
  producto   Producto @relation(fields: [productoId], references: [id])

  createdAt  DateTime @default(now())

  @@index([productoId])
}

model Variante {
  id         String         @id @default(cuid())
  talla      String
  color      String?
  stock      Int            @default(0)
  sku        String?
  precio     Decimal?       @db.Decimal(10, 2)
  estado     EstadoVariante @default(ACTIVA)

  productoId String
  producto   Producto       @relation(fields: [productoId], references: [id])

  movimientos MovimientoInventario[]
  ventaItems  VentaItem[]

  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([productoId])
  @@index([estado])
}

model ProductoColeccion {
  id          String    @id @default(cuid())

  productoId  String
  producto    Producto  @relation(fields: [productoId], references: [id])

  coleccionId String
  coleccion   Coleccion @relation(fields: [coleccionId], references: [id])

  createdAt   DateTime  @default(now())

  @@unique([productoId, coleccionId])
  @@index([productoId])
  @@index([coleccionId])
}

model MovimientoInventario {
  id            String                   @id @default(cuid())
  tipo          TipoMovimientoInventario
  cantidad      Int
  stockAnterior Int
  stockNuevo    Int
  nota          String?

  varianteId    String
  variante      Variante                 @relation(fields: [varianteId], references: [id])

  createdAt     DateTime @default(now())

  @@index([varianteId])
  @@index([tipo])
  @@index([createdAt])
}

enum MetodoPago {
  EFECTIVO
  TARJETA
  TRANSFERENCIA
}

model Venta {
  id              String     @id @default(cuid())
  total           Decimal    @db.Decimal(10, 2)
  metodoPago      MetodoPago @default(EFECTIVO)
  montoRecibido   Decimal?   @db.Decimal(10, 2)
  cambio          Decimal?   @db.Decimal(10, 2)
  referencia      String?
  clienteNombre   String?
  clienteTelefono String?

  // Quién hizo la venta (admin o vendedor). Guardamos el nombre como snapshot
  // para que el reporte siga correcto aunque se borre la cuenta del vendedor.
  vendedorId      String?
  vendedorNombre  String?

  tiendaId        String
  tienda          Tienda     @relation(fields: [tiendaId], references: [id])

  items           VentaItem[]

  createdAt       DateTime   @default(now())

  @@index([tiendaId])
  @@index([vendedorId])
  @@index([createdAt])
}

model VentaItem {
  id             String    @id @default(cuid())

  ventaId        String
  venta          Venta     @relation(fields: [ventaId], references: [id])

  varianteId     String?
  variante       Variante? @relation(fields: [varianteId], references: [id])

  // Snapshots: se guardan al momento de la venta para que el reporte no cambie
  // aunque luego se edite el precio o se borre el producto.
  productoNombre String
  talla          String
  cantidad       Int
  precioUnitario Decimal   @db.Decimal(10, 2)
  subtotal       Decimal   @db.Decimal(10, 2)

  createdAt      DateTime  @default(now())

  @@index([ventaId])
}

// Registro de cada uso de IA por tienda (sirve de log y para el límite de uso).
model UsoIA {
  id        String   @id @default(cuid())
  funcion   String
  exito     Boolean  @default(true)
  detalle   String?

  tiendaId  String
  tienda    Tienda   @relation(fields: [tiendaId], references: [id])

  createdAt DateTime @default(now())

  @@index([tiendaId])
  @@index([createdAt])
}

enum AlcancePromo {
  TIENDA
  COLECCION
  MARCA
}

// Promocion: descuento en % que aplica a toda la tienda, a una coleccion o a
// una marca, dentro de un rango de fechas. Rebaja muchos productos a la vez.
model Promocion {
  id          String       @id @default(cuid())
  nombre      String
  porcentaje  Int
  alcance     AlcancePromo @default(TIENDA)
  coleccionId String?
  marca       String?
  inicio      DateTime
  fin         DateTime
  activa      Boolean      @default(true)

  tiendaId    String
  tienda      Tienda       @relation(fields: [tiendaId], references: [id])

  createdAt   DateTime     @default(now())

  @@index([tiendaId])
}

// Retiro de efectivo de la caja. Solo el administrador puede registrarlos.
model RetiroCaja {
  id        String   @id @default(cuid())
  monto     Decimal  @db.Decimal(10, 2)
  nota      String?

  tiendaId  String
  tienda    Tienda   @relation(fields: [tiendaId], references: [id])

  createdAt DateTime @default(now())

  @@index([tiendaId])
  @@index([createdAt])
}